# clrsync

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  PKGBUILD  PKGBUILD.in  README.md  flake.nix  home-manager-module.nix  meson.build  package.nix
.github/workflows/: Test NSIS.yml  Test PKGBUILD-git.yml  Test flake.yml  Test packages.yml  publish-release.yml
AUR/: PKGBUILD  PKGBUILD-git  PKGBUILD.in
cmake/: Dependencies.cmake  ImGui.cmake  Install.cmake  Packaging.cmake
example_config/: config.toml
example_config/palettes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macciato.toml  catppuccin-mocha.toml  cursed-light.toml  cursed.toml  dark.toml  everforest-dark-hard.toml  everforest-dark.toml  everforest-light.toml  flexoki-light.toml  flexoki.toml  gruvbox-dark.toml  gruvbox-hard.toml  gruvbox-light.toml  light.toml  rose-pine-dawn.toml  rose-pine-moon.toml  rose-pine.toml
example_config/templates/: formats-demo  kitty.conf  nvim.lua
extra/: README.md
extra/palettes/: cursed-light.toml  nord.toml
extra/palletes/: nord.toml
extra/templates/: alacritty.toml  ghostty
lib/color_text_edit/: TextEditor.cpp  TextEditor.h
resources/: clrsync.desktop
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  error.hpp  utils.cpp  utils.hpp  version.cpp  version.hpp  version.hpp.in
src/core/common/: error.hpp  utils.cpp  utils.hpp  version.cpp  version.hpp
src/core/config/: config.cpp  config.hpp
src/core/io/: file.hpp  toml_file.cpp  toml_file.hpp
src/core/palette/: color.cpp  color.hpp  color_keys.hpp  palette.hpp  palette_file.hpp  palette_manager.hpp
src/core/theme/: template_manager.hpp  theme_renderer.hpp  theme_template.cpp  theme_template.hpp
src/gui/: CMakeLists.txt  about_window.cpp  about_window.hpp  color_scheme_editor.cpp  color_scheme_editor.hpp  color_table_renderer.cpp  color_table_renderer.hpp  file_browser.cpp  file_browser.hpp  file_browser_macos.mm  font_loader.cpp  font_loader.hpp  imgui_helpers.cpp  imgui_helpers.hpp  main.cpp  palette_controller.cpp  palette_controller.hpp  preview_renderer.cpp  preview_renderer.hpp  screen_eyedropper.cpp  screen_eyedropper.hpp  settings_window.cpp  settings_window.hpp  template_controller.cpp  template_controller.hpp  template_editor.cpp  template_editor.hpp  theme_applier.cpp  theme_applier.hpp  ui_manager.cpp  ui_manager.hpp
src/gui/backend/: backend.hpp  glfw_opengl.cpp  glfw_opengl.hpp
src/gui/controllers/: palette_controller.cpp  palette_controller.hpp  template_controller.cpp  template_controller.hpp  theme_applier.cpp  theme_applier.hpp
src/gui/helpers/: imgui_helpers.cpp  imgui_helpers.hpp
src/gui/layout/: main_layout.cpp  main_layout.hpp
src/gui/platform/: file_browser.hpp  font_loader.hpp
src/gui/platform/linux/: file_browser_linux.cpp  font_loader_linux.cpp
src/gui/platform/macos/: file_browser_macos.mm  font_loader_macos.cpp
src/gui/platform/windows/: file_browser_windows.cpp  font_loader_windows.cpp
src/gui/views/: about_window.cpp  about_window.hpp  color_scheme_editor.cpp  color_scheme_editor.hpp  color_table_renderer.cpp  color_table_renderer.hpp  preview_renderer.cpp  preview_renderer.hpp  settings_window.cpp  settings_window.hpp  template_editor.cpp  template_editor.hpp
src/gui/widgets/: action_buttons.cpp  action_buttons.hpp  autocomplete.cpp  autocomplete.hpp  centered_text.cpp  centered_text.hpp  colors.cpp  colors.hpp  dialogs.cpp  dialogs.hpp  error_message.cpp  error_message.hpp  form_field.cpp  form_field.hpp  input_dialog.cpp  input_dialog.hpp  link_button.cpp  link_button.hpp  palette_selector.cpp  palette_selector.hpp  section_header.cpp  section_header.hpp  settings_buttons.cpp  settings_buttons.hpp  styled_checkbox.cpp  styled_checkbox.hpp  template_controls.cpp  template_controls.hpp  validation_message.cpp  validation_message.hpp
